# CF Snippets Changelog

## 4.0.0-dev
- Updated to allow some functionality to work when called via WP CLI
- Updated JS to no longer use jQuery.live calls. These were generating errors in The Healthier Life admin.
- Remove call to get_the_content($snippet_post->ID) and replace with $snippet_post->post_content to prevent notices in admin screen.
- Add logic to detect a fresh plugin install (no version set in options, no snippets set in options). Set version number to current CFSP_VERSION and bypasses any upgrade actions.
- Add permissions detection to Ajax calls and in other places.
- Add error message is snippet not removed via ajax.
- Move contextual help to post type pages.
- Add sortable "key" column to post admin pages. Change "title" to "description".
- Added ability to edit/create/preview snippets on post pages with appropriate permissions for security.
- Cleaned up code base.
- Replace create_function() call with standard function.
- Typeahead Ajax: convert databasse query using $wpdb to use WP_Query and a custom filter
- Add esc_attr() to attributes.
- Change $_REQUEST reference to $_POST, sanitze titles in widget
- Convert widget to use type-ahead, removing the need for a drop-down listing all snippets
- Remove unbounded queries

## 3.2.3
- Updated the upgrade routine to be more robust.

## 3.2.2
- Updated to remove ability to rename snippets.

## 3.2.1
- add 'cf_snippets_admin_permission' filter to allow different capabilities to manage snippets
- default permission is 'manage_options'

## 3.2
- Updated post snippet management
- Removed "post_parent" snippet association to specific posts
- Updated snippets to not store content as meta, now stores as post content.

## 3.1.6
- Hotfix to set global $post object, since setup_postdata does not do so.

## 3.1.5
- Hotfix to properly reset all postdata. Removed all calls in snippets class to wp_reset_query.

## 3.1.4
- Hotfix to preserve authordata

## 3.1.3